--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "A secure Google Contacts Viewer application",
   "scripts": {
-    "build": "node build.js",
+    "build": "node build.js && npm run verify",
+    "verify": "node verify-build.js",
     "dev": "http-server -p 8888"
   },
   "dependencies": {},
