--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "A secure Google Contacts Viewer application",
   "scripts": {
-    "build": "node build.js && npm run verify",
+    "build": "node prebuild.js",
     "verify": "node verify-build.js",
     "dev": "http-server -p 8888"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "dotenv": "^16.3.1",
-    "fs-extra": "^11.1.1",
-    "http-server": "^14.1.1",
-    "netlify-plugin-debug": "^1.0.0"
+    "fs-extra": "^11.1.1"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   },
   "engines": {
     "node": ">=18.0.0"
